--- a/index_cpp.html
+++ b/index_cpp.html
@@ -512,13 +512,25 @@
         <div class="topic-body">
             <div>
                 <div class="project-title">
-                    <div><a href="https://github.com/maciej-mazur-github/CPP_Deque-Implementation-Using-Templates" target="_blank">Random Character Generator <br>With File Handling</a></div>
+                    <div><a href="https://github.com/maciej-mazur-github/CPP_Random-Character-Generator-With-File-Handling" target="_blank">Random Character Generator <br>With File Handling</a></div>
                     <div class="difficulty-label">Difficulty
                         <div class="difficulty-level-3"></div>
                     </div>
                 </div>
 
                 <p class="project-description">Simple exercise in file handling in C++. Function void generateAndSaveInFile() is used to generate 15 random letters (both lower and uppercase).<span class="dots">...</span><span class="more"> cstdlib functions srand() and rand() were used pretty creatively to generate random letters while excluding 6 non-letter characters in between uppercase and lowercase letters in ASCII table. Each properly generated ASCII code is then cast to char variable to allow the program to print actual letters later. Both functions generateAndSaveInFile() and readFromFile() are guarded in case any file handling errors occur during the process. An endless loop has been implemented to run the program until '3' is chosen by the user to quit it. All functions were implemented in a separate file (random_character_generator.cpp) to make the code look clearer. No class encapsulation was used in this program.</span><span class="expand-collapse">Read more</span></p>
+            </div>
+
+
+            <div>
+                <div class="project-title">
+                    <div><a href="https://github.com/maciej-mazur-github/CPP_Array-Generator-And-Sorter" target="_blank">Array Generator And Sorter</a></div>
+                    <div class="difficulty-label">Difficulty
+                        <div class="difficulty-level-3"></div>
+                    </div>
+                </div>
+
+                <p class="project-description">Pretty simple integer array sorter including array generator. Three sorting algorithms have been implemented - Bubble Sort, Selection Sort and Insertion Sort. There are<span class="dots">...</span><span class="more"> also four methods available to fill arrays in with integer numbers. Two of them operate on a pre-existing, user defined array, the other two generate the array dynamically on the heap and then return the pointer to it. Two of them allow the user to enter the consecutive numbers manually, another two methods generate them automatically using &lt;ctime&gt; rand() and srand() functions. There is also a printing method available. Method sortingAlgoritmChoice is guarded in case the user enters any number outside 1-3 range. All methods have been declared as static methods of one ArrayGeneratorSorter class. Sorting and accessory methods have been declared private not to be available for the end user.</span><span class="expand-collapse">Read more</span></p>
             </div>
 
 
