Add String Parser project

--- a/index_cpp.html
+++ b/index_cpp.html
@@ -510,6 +510,19 @@
     <div id="wrapper2">
         <p class="topic-title">Miscellaneous Non-template Based Projects</p>
         <div class="topic-body">
+
+            <div>
+                <div class="project-title">
+                    <div><a href="https://github.com/maciej-mazur-github/CPP_String-Parser-And-Separator" target="_blank">String Parser And Separator</a></div>
+                    <div class="difficulty-label">Difficulty
+                        <div class="difficulty-level-4"></div>
+                    </div>
+                </div>
+
+                <p class="project-description">String processing exercise consisting of operating on input strings of std::string class. There are two parsing and separating methods available. One of them considers<span class="dots">...</span><span class="more"> an order number of single words of the input string. It will analyze the input string and distribute its odd order number words (i.e., the first, the third, the fifth etc.) and even order number words into two separate output strings, and then will print them both out. The other method will also distribute input string words into two separate output strings, but this time taking into account the parity of the number of characters in particular words. Both these methods are designed to also pass letters (lower and uppercase) and digits only. All other characters (e.g., %, *, @) of input string will be filtered out. Both these methods recognize any potential initial spaces or tabulations in input string and ignore them. Also, whenever after the series of non-space and non-tab characters any space or tab is detected, the program knows that a given word met its end, hence can now be copied to one of the output strings, with additional space character appended to let the words in output strings remain somehow separated. Any series of spaces or tabs separating input string words will be recognized and properly ignored. The accessory loadString method lets the user fill the input string in manually with any characters (all keyboard available characters will be saved, no filtering out is used here) in case the provided input string is empty.</span><span class="expand-collapse">Read more</span></p>
+            </div>
+            
+
             <div>
                 <div class="project-title">
                     <div><a href="https://github.com/maciej-mazur-github/CPP_Random-Character-Generator-With-File-Handling" target="_blank">Random Character Generator <br>With File Handling</a></div>
