Add Recursion Stairs program

--- a/index_cpp.html
+++ b/index_cpp.html
@@ -559,6 +559,18 @@
             </div>
 
 
+            <div>
+                <div class="project-title">
+                    <div><a href="https://github.com/maciej-mazur-github/CPP_Recursion-Stairs" target="_blank">Recursion Stairs</a></div>
+                    <div class="difficulty-label">Difficulty
+                        <div class="difficulty-level-2"></div>
+                    </div>
+                </div>
+
+                <p class="project-description">Visually interesting algorithm exercise based on recursion. The program first ascends, summing up partial sum and gradually incremented counter, also<span class="dots">...</span><span class="more"> drawing as many '>' characters as the current value of counter is. Then, after reaching the number provided by the user, it starts descending, reversing the whole process. Private method adder(int number) bases on static integer fields partialSum and counter to let each recursion instance use the same common variables.</span><span class="expand-collapse">Read more</span></p>
+            </div>
+
+
         </div>
 
 
